#
# Copyright (c) 2018 Dell Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# THIS CODE IS PROVIDED ON AN *AS IS* BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT
# LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS
# FOR A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
#
# See the Apache Version 2.0 License for specific language governing
# permissions and limitations under the License.
#

nobase_include_HEADERS = \
opx/nas_hash_cps.h      opx/nas_l2_init.h     opx/nas_mac_api.h \
opx/nas_mirror_api.h    opx/nas_sflow_api.h   opx/nas_stg_api.h \
opx/nas_switch_cps.h    opx/nas_switch_log.h  opx/nas_switch_mac.h \
opx/nas_mc_util.h
